# landvault-contracts

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: verify-spec.yml
contracts/discover-pod/: consumer-openapi.yaml  coverage-matrix.md
contracts/discover-pod/level1/: run-level1.sh  run-level1.test.sh
contracts/discover-pod/level1/testdata/: conforming.yaml  provider-main-0e44479.yaml  warn-only.yaml
contracts/discover-pod/level2/: expected-failures.yaml  pyproject.toml  run-level2.py
contracts/discover-pod/verify/: package-lock.json  package.json  run-verify-spec.test.sh  verify-consumer-openapi.mjs
contracts/discover-pod/verify/testdata/: missing-source-enum.yaml
